# CompSysBio2025

./: .gitignore  README.md  main.py  pyproject.toml
models/: __init__.py  _utils.py  bursty_base.py  bursty_grn.py  limit_grn.py
models/networks/: __init__.py  _base.py  repressilator.py  toggle_switch.py
models/solution/: __init__.py  bursty_base.py  bursty_grn.py  limit_grn.py
models_solution/: __init__.py
scripts/: .gitignore  repressilator.py  test_bursty_base.py  test_bursty_grn.py  test_sc_vs_bulk.py
